<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_news_list"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_ad_list"
        android:icon="@drawable/ic_ads"
        android:title="@string/title_ads" />

    <item
        android:id="@+id/navigation_event_list"
        android:icon="@drawable/ic_events"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />

</menu>
