<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gorod.moygorodok.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gorod.moygorodok.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gorod.moygorodok.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_news_list"
        android:name="com.gorod.moygorodok.ui.news.NewsListFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news_list">
        <action
            android:id="@+id/action_newsList_to_newsDetail"
            app:destination="@id/navigation_news_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news_detail"
        android:name="com.gorod.moygorodok.ui.news.NewsDetailFragment"
        android:label="@string/title_news_detail"
        tools:layout="@layout/fragment_news_detail">
        <argument
            android:name="newsId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_announcement_list"
        android:name="com.gorod.moygorodok.ui.announcements.list.AnnouncementListFragment"
        android:label="@string/title_ads"
        tools:layout="@layout/fragment_announcement_list">
        <action
            android:id="@+id/action_announcementList_to_announcementDetail"
            app:destination="@id/navigation_announcement_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_announcement_detail"
        android:name="com.gorod.moygorodok.ui.announcements.detail.AnnouncementDetailFragment"
        android:label="@string/title_ad_detail"
        tools:layout="@layout/fragment_announcement_detail">
        <argument
            android:name="announcementId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_announcement"
        android:name="com.gorod.moygorodok.ui.announcements.create.CreateAnnouncementFragment"
        android:label="@string/title_create_announcement"
        tools:layout="@layout/fragment_create_announcement">
        <argument
            android:name="editId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_announcements"
        android:name="com.gorod.moygorodok.ui.announcements.my.MyAnnouncementsFragment"
        android:label="@string/title_my_announcements"
        tools:layout="@layout/fragment_my_announcements" />

    <fragment
        android:id="@+id/navigation_favorite_announcements"
        android:name="com.gorod.moygorodok.ui.announcements.favorites.FavoriteAnnouncementsFragment"
        android:label="@string/title_favorite_announcements"
        tools:layout="@layout/fragment_favorite_announcements" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.gorod.moygorodok.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/navigation_event_list"
        android:name="com.gorod.moygorodok.ui.events.list.EventListFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_event_list">
        <action
            android:id="@+id/action_eventList_to_eventDetail"
            app:destination="@id/navigation_event_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event_detail"
        android:name="com.gorod.moygorodok.ui.events.detail.EventDetailFragment"
        android:label="@string/title_event_detail"
        tools:layout="@layout/fragment_event_detail">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_delivery_list"
        android:name="com.gorod.moygorodok.ui.delivery.list.DeliveryListFragment"
        android:label="@string/title_delivery"
        tools:layout="@layout/fragment_delivery_list">
        <action
            android:id="@+id/action_deliveryList_to_deliveryDetail"
            app:destination="@id/navigation_delivery_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_delivery_detail"
        android:name="com.gorod.moygorodok.ui.delivery.detail.DeliveryDetailFragment"
        android:label="@string/title_delivery_detail"
        tools:layout="@layout/fragment_delivery_detail">
        <argument
            android:name="deliveryId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_task_list"
        android:name="com.gorod.moygorodok.ui.tasks.TaskListFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_task_list">
        <action
            android:id="@+id/action_taskList_to_taskDetail"
            app:destination="@id/navigation_task_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_task_detail"
        android:name="com.gorod.moygorodok.ui.tasks.TaskDetailFragment"
        android:label="@string/title_task_detail"
        tools:layout="@layout/fragment_task_detail">
        <argument
            android:name="taskId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_delivery_admin"
        android:name="com.gorod.moygorodok.ui.delivery_admin.DeliveryAdminFragment"
        android:label="@string/title_delivery_admin"
        tools:layout="@layout/fragment_delivery_admin" />

    <fragment
        android:id="@+id/navigation_emergency"
        android:name="com.gorod.moygorodok.ui.emergency.EmergencyFragment"
        android:label="@string/emergency_title"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/navigation_notification_list"
        android:name="com.gorod.moygorodok.ui.notification_list.NotificationListFragment"
        android:label="@string/notifications_title"
        tools:layout="@layout/fragment_notification_list" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.gorod.moygorodok.ui.chat.ChatFragment"
        android:label="@string/chat_title"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_cinema_list"
        android:name="com.gorod.moygorodok.ui.cinema.CinemaListFragment"
        android:label="@string/cinema_title"
        tools:layout="@layout/fragment_cinema_list">
        <action
            android:id="@+id/action_cinemaList_to_movieDetail"
            app:destination="@id/navigation_movie_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movie_detail"
        android:name="com.gorod.moygorodok.ui.cinema.MovieDetailFragment"
        android:label="@string/movie_detail_title"
        tools:layout="@layout/fragment_movie_detail">
        <argument
            android:name="movieId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_currency_list"
        android:name="com.gorod.moygorodok.ui.currency.CurrencyListFragment"
        android:label="@string/currency_title"
        tools:layout="@layout/fragment_currency_list" />

    <fragment
        android:id="@+id/navigation_company_list"
        android:name="com.gorod.moygorodok.ui.company.list.CompanyListFragment"
        android:label="@string/company_title"
        tools:layout="@layout/fragment_company_list">
        <action
            android:id="@+id/action_companyList_to_companyDetail"
            app:destination="@id/navigation_company_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_company_detail"
        android:name="com.gorod.moygorodok.ui.company.detail.CompanyDetailFragment"
        android:label="@string/company_detail_title"
        tools:layout="@layout/fragment_company_detail">
        <argument
            android:name="companyId"
            app:argType="integer" />
    </fragment>

    <!-- Auth -->
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.gorod.moygorodok.ui.auth.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_pin"
            app:destination="@id/navigation_pin" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pin"
        android:name="com.gorod.moygorodok.ui.auth.pin.PinFragment"
        android:label="@string/title_code"
        tools:layout="@layout/fragment_pin">
        <action
            android:id="@+id/action_pin_to_register"
            app:destination="@id/navigation_register" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.gorod.moygorodok.ui.auth.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.gorod.moygorodok.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_avatar"
            app:destination="@id/navigation_avatar" />
    </fragment>

    <fragment
        android:id="@+id/navigation_avatar"
        android:name="com.gorod.moygorodok.ui.avatar.AvatarFragment"
        android:label="@string/title_avatar"
        tools:layout="@layout/fragment_avatar" />

    <fragment
        android:id="@+id/navigation_horoscope"
        android:name="com.gorod.moygorodok.ui.horoscope.HoroscopeFragment"
        android:label="Гороскоп"
        tools:layout="@layout/fragment_horoscope">
        <argument
            android:name="sign"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <!-- Reports -->
    <fragment
        android:id="@+id/navigation_my_reports"
        android:name="com.gorod.moygorodok.ui.report.list.ReportListFragment"
        android:label="@string/report_list_title"
        tools:layout="@layout/fragment_report_list">
        <action
            android:id="@+id/action_reportList_to_reportDetail"
            app:destination="@id/navigation_report_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_report_detail"
        android:name="com.gorod.moygorodok.ui.report.detail.ReportDetailFragment"
        android:label="@string/report_detail_title"
        tools:layout="@layout/fragment_report_detail">
        <argument
            android:name="reportId"
            app:argType="integer" />
    </fragment>

</navigation>
